chore: auto-commit before remote build/deploy